refactor: chuyển sang single-module Maven, xoá folder client/server